fixed form text visibility

--- a/Tommy Arcade/src/main/webapp/stylesheet.css
+++ b/Tommy Arcade/src/main/webapp/stylesheet.css
@@ -177,3 +177,8 @@ html {
 	font-style: italic;
 	color: #8f8f8f;
 }
+
+.login-form {
+	color: white;
+	font-family: Calibri, sans-serif;
+}
